--- a/assets/css/beach.css
+++ b/assets/css/beach.css
@@ -26,13 +26,15 @@
   color: white;
   line-height: 1.4;
   margin-top: 0;
-  padding: 20px;
+  text-align: center;
 }
 .lorem3{
   font-size: 20px;
   color: #926239;
   line-height: 1.4;
   margin: 10px;
+  text-align: center;
+  margin: 10px 10px 4px;
 }
 .btn{
   padding: 15px 20px;
