--- a/assets/css/table.css
+++ b/assets/css/table.css
@@ -4,7 +4,6 @@ table{
   border-radius: 10px;
   overflow: hidden;
 }
-
 td,
 th{
   padding: 13px;
@@ -17,62 +16,48 @@ th{
 .head{
   font-size: 20px;
   font-weight: 700;
+  color: white;
 }
 .line1{
 vertical-align: middle;
 background-color: rgb(138,180,248);
-color: white;
 }
 .line2{
-  color: white;
   background-color: rgb(113, 152, 214);
 }
 .line3{
-  color: white;
   background-color: rgb(78, 110, 161);;
 }
 .line4{
-  color: white;
   background-color: rgb(36, 72, 126);;
 }
 .line5{
-  color: white;
   background-color: rgb(16, 47, 95);;
 }
 
-.amount,
-.line40,
-.unl,
-.email,
-.cl15,
-.unl60,
-.h,
-.yes1,
-.yes2,
-.zero,
-.st2,
-.st4{
-  background-color: rgb(224, 220, 220);
+.item:nth-child(2n){
+  background-color: rgb(243, 237, 237);
 }
-
-.gb20,
-.gb110,
-.band,
-.gb240,
-.gb1300,
-.n1,
-.cl60,
-.cl150,
-.unl600,
-.noot,
-.yess,
-.sup,
-.cl66,
-.cl200,
-.st11,
-.st33,
-.data{
-  background-color: rgb(243, 238, 238);
+.item:nth-child(2n+1){
+  background-color: rgb(224,220, 220);
+}
+.item3:nth-child(odd){
+  background-color: rgb(243, 237, 237);
+}
+.item2:nth-child(odd){
+  background-color: rgb(243, 237, 237);
+}
+.item2:nth-child(even){
+  background-color: rgb(248, 246, 246);
+}
+.item3:nth-child(even){
+  background-color: rgb(248, 246, 246);
+}
+.item4:nth-child(even){
+  background-color: rgb(248, 246, 246);
+}
+.item4:nth-child(odd){
+  background-color: rgb(243, 237, 237);
 }
 button{
   background-color: rgb(224, 220, 220);
