--- a/assets/css/beach.css
+++ b/assets/css/beach.css
@@ -1,6 +1,6 @@
 .header{
   background-image: url(../imeges/beach.jpg);
-  height: 100vh;
+  min-height: 100vh;
   width: 94.2vw;
   text-align: center;
   padding: 0 20px;
