--- a/assets/css/beach.css
+++ b/assets/css/beach.css
@@ -1,61 +1,46 @@
-.header{
+* {
+  box-sizing: border-box;
+  margin: 0;
+  text-align: center;
+}
+.header {
   background-image: url(../imeges/beach.jpg);
   min-height: 100vh;
-  width: 94.2vw;
-  text-align: center;
-  padding: 0 20px;
+  padding: 30vh 20px 0;
   background-repeat: no-repeat;
-  object-fit: cover;
-  background-size: 1750px 620px;
-  background-position: top;
+  background-size: cover;
+  background-position: bottom;
   font-size: 27px;
-  line-height: 0.3;
+  line-height: 1.2;
   color: #926239;
-  margin: 0 0 0 0;
-  }
- 
-.name{
-  padding-top: 30vh;
-} 
-.lorem1{
-  margin: 0 0 30px 0;
-} 
+  background-color: white;
+}
 .section{
   background-color: #926239;
   font-size: 20px;
-  color: #926239;
-  text-align: center;
-  line-height: 1.4;
-  }
-.lorem2{
   color: white;
-  margin-top: 0;
+  text-align: center;
+  line-height: 1.6;
+  padding: 20px;
 }
-.lorem3{
-  margin: 10px 1px 1px;
-  background-color: hsl(0, 43%, 99%);
-}
-.btn{
+.btn {
   padding: 15px 20px;
   border-radius: 10px;
   border: 1px solid #926239;
   color: #926239;
   font-size: 17px;
+  margin: 25px;
 }
-.btn:hover{
+.btn:hover {
   background-color: #926239;
   color: white;
 }
-.section2{
-  width: 29.13vw;
-  color: white;
-  padding: 19px;
+.small-section {
   display: inline-block;
+  width: 33vw;
   text-align: left;
-  line-height: 1.2;
-  font-size: 19px; 
-  }
-.lorem22{
+}
+.section-alt-color {
   color: #926239;
-  background-color: hsl(0, 43%, 99%);
+  background-color: white;
 }
