--- a/assets/css/position.css
+++ b/assets/css/position.css
@@ -9,28 +9,28 @@
 .box-1 {
   width: 100px;
   height: 100px;
-  left: 0;
-  top: 0;
+  left: 10px;
+  top: 10px;
 }
 .box-2{
   width: 200px;
   height: 100px;
-  top: 0;
-  right: 0;
+  top: 10px;
+  right: 15px;
 }
 .box-3{
   width: 100px;
   height: 100px;
-  left: 0;
-  bottom: 0;
+  left: 10px;
+  bottom: 5px;
   border-radius: 50%;
 }
 
 .box-4{
   width: 200px;
   height: 100px;
-  right: 0;
-  bottom: 0;
+  right: 33px;
+  bottom: 20px;
   border-radius: 30%;
 }
 .box-5{
