--- a/assets/css/position.css
+++ b/assets/css/position.css
@@ -1,42 +1,24 @@
-.box {
-  font-size: 45px;
-  text-align: center;
-  border: 10px solid black;
-  background-color: orange;
-  position: fixed;
-  box-sizing: border-box;
-}
-.box-1 {
-  width: 100px;
-  height: 100px;
-  left: 10px;
-  top: 10px;
-}
-.box-2{
-  width: 200px;
-  height: 100px;
-  top: 10px;
-  right: 15px;
-}
-.box-3{
-  width: 100px;
-  height: 100px;
-  left: 10px;
-  bottom: 5px;
+.mouse,
+.box{
+  width: 150px;
+  height: 150px;
   border-radius: 50%;
+  background-color: black;
+  position: absolute;
+  top:-59px;  
 }
-
-.box-4{
-  width: 200px;
-  height: 100px;
-  right: 33px;
-  bottom: 20px;
-  border-radius: 30%;
-}
-.box-5{
-  width: 200px;
-  height: 110vh;
-  left: 500px;
+.relative {
   position: relative;
-  border-radius: 30%;
+  width: 300px;
+  height: 300px;
+  left: 450px;
+  top: 170px;
+}
+.absolute-1 {
+  left: -91px;
+
+
+}
+.absolute-2 {
+  right: -91px;
 }
