--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -78,6 +78,7 @@
   opacity: 0.1;
   background-color:white;
   opacity: 0.1;
+  transition: transform 1s linear;
   }
 .title::before {
   top: 70px;
@@ -113,7 +114,7 @@
 }
 .title:hover::before,
 .title:hover::after{
-  transform: skew(380deg, 460deg);
+  transform: skew(45deg, 45deg);
 }
 .title:hover{
   text-decoration: underline;
