--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -2,48 +2,40 @@
   box-sizing: border-box;
 }
 .card {
-  width: 30.6%;
-  height: 230px;
+  width: 30%;
+  max-width: 500px;
+  min-width: 300px;
+  min-height: 230px;
   display: inline-block;
-  border: 1px solid;
   margin: 10px;
   font-family: Verdana;
   border-radius: 10px;
-  font-size: 17px;
+  font-size: 24px;
   color: white;
-  padding: 0px;
+  padding: 60px 50px;
   overflow: hidden;
 }
 .body {
-  font-size: 0;
   min-height: 150vh;
 }
 .relative {
   position: relative;
 }
-.title {
-  top: 40px;
-  left: 30px;
-  width: 150px;
-}
+
 .sum {
-  top: 64px;
-  left: 30px;
+  margin-top: 30px;
+  margin-bottom: 45px;
   font-size: 29px;
-  font-weight: 540;
-  width: 180px;
+  font-weight: 700;
   transition: font-size 0.6s linear, color 0.7s linear;
 }
-.incr-dicr {
-  top: 120px;
-  left: 30px;
-  width: 180px;
-}
+
 .img {
+  position: absolute;
   width: 25px;
   height: 25px;
-  right: -285px;
-  top: -25px;
+  right: 50px;
+  top: 60px;
 }
 .sales {
   background: linear-gradient(
@@ -58,7 +50,6 @@
     rgba(244, 242, 231, 0.960463408996411) 0%,
     rgba(48, 187, 60, 0.8036006638983718) 50%
   );
-  margin: 0 26px;
 }
 .online {
   background: linear-gradient(
@@ -67,8 +58,8 @@
     rgba(48, 127, 187, 0.8036006638983718) 50%
   );
 }
-.title::before,
-.title::after{
+.card::before,
+.card::after {
   content: "";
   display: inline-block;
   width: 250px;
@@ -76,46 +67,40 @@
   border-radius: 50%;
   position: absolute;
   opacity: 0.1;
-  background-color:white;
-  opacity: 0.1;
+  background-color: white;
   transition: transform 1s linear;
-  }
-.title::before {
-  top: 70px;
-  right: -230px;
 }
-.title::after {
+.card::before {
+  top: -70px;
+  right: -90px;
+}
+.card::after {
   bottom: -120px;
-  right: -330px;
+  right: -20px;
 }
-.card:nth-child(3n){
+.card:nth-child(3n) {
   background: linear-gradient(
     59deg,
     rgba(244, 242, 231, 0.960463408996411) 0%,
     rgba(48, 127, 187, 0.8036006638983718) 50%
   );
 }
-.card:first-child{
+.card:nth-child(3n + 1) {
   background: linear-gradient(
     59deg,
     rgba(244, 242, 231, 0.960463408996411) 0%,
     rgba(187, 48, 153, 1) 50%
   );
 }
-.incr-dicr:hover{
-  color: black;
+.card:nth-child(3n + 2) {
+  background: linear-gradient(
+    59deg,
+    rgba(244, 242, 231, 0.960463408996411) 0%,
+    rgba(48, 187, 60, 0.8036006638983718) 50%
+  );
 }
-.sum:hover{
-  font-size: 32px;
-  color: black;
-}
-.sum::first-letter{
-  color: gold;
-}
-.title:hover::before,
-.title:hover::after{
+
+.card:hover::before,
+.card:hover::after {
   transform: skew(45deg, 45deg);
-}
-.title:hover{
-  text-decoration: underline;
 }
