--- a/assets/css/Form-Register/header.css
+++ b/assets/css/Form-Register/header.css
@@ -21,3 +21,8 @@ color: brown;
 font-family: Georgia, 'Times New Roman', Times, serif;
   }
 }
+@media (max-width:500px) {
+  .header{
+    background-color: aquamarine;
+  }
+}
